# InvisibL3

./: .gitignore  notes.txt  package-lock.json  package.json
cairo_contracts/: cli.txt
cairo_contracts/dummy/: test_hash.cairo  tests.cairo
cairo_contracts/exiestence_checks/: existence_inputs.json
cairo_contracts/helpers/: commitments.cairo  signatures.cairo  tx_hash.cairo  tx_hash_inputs.json  utils.cairo  verify_commitments.cairo
cairo_contracts/merkle_updates/: merkle_updates.cairo
cairo_contracts/rollup/: main.cairo  output_structs.cairo
cairo_contracts/signatures/: return_signature.cairo  sig_input.json  signatures.cairo
cairo_contracts/swap/: multiswap_inputs.json  swap_transaction.cairo
cairo_contracts/tests/: existence_tests.py
invisible_backend/: Cargo.toml  rust_input.json
invisible_backend/js/: note_tests.js
invisible_backend/src/: lib.rs  main.rs  notes.rs  pedersen.rs  trees.rs  users.rs  zzposeidon.rs
invisible_backend/src/starkware_crypto/: mod.rs
invisible_backend/src/test_utils/: mod.rs
invisible_backend/src/transactions/: deposit.rs  limit_order.rs  mod.rs  swap.rs  transaction_batch.rs  withdrawal.rs
invisible_backend/src/trees/: tree_utils.rs
invisible_backend/src/zzposeidon/: constants.rs
starknet_contracts/: merkleTree.cairo
test/: firebaseFunctions.js  json_test.js  test_merkle_trees.js  test_notes.js  test_pedersen_hash.js  test_secp256k1.js  test_swaps.js  test_swaps_new.js  test_swaps_prev.js  test_transaction.js  test_unshilded_swaps.js  user_tests.js
utils/: 1_generate_multiple_sample.js
(+162 files in other folders)
