[package]
name = "invisible_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "invisible_backend"
crate-type = ["cdylib", "rlib"]


[dependencies]
primitive-types = "0.11.1"
poseidon-rs = "0.0.8"
ff = {package="ff_ce", version="0.11", features = ["derive"]}
rand = "0.4"
num-bigint = "0.4"
rustc-serialize = "0.3"
starkware-crypto-sys = "0.1.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
hex-literal = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"